--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="index.css">
   <link rel="icon" href="https://avatars.githubusercontent.com/u/6108985?v=4" type="image/png"></head>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1850763013639682" crossorigin="anonymous"></script>
+    
   <body>
     <div id="loading">
       <div id="spinner"></div>
